Prevent horizontal overflow and set max width

--- a/style.css
+++ b/style.css
@@ -408,3 +408,8 @@ footer p{
     color: #666;
 }
 
+html,
+body {
+    overflow-x: hidden;
+    max-width: 100%;
+}
